# wanglandau

./: .gitignore  Analysis.nb  CMakeLists.txt  Figures.nb  README.markdown  README.md  build.sh  input.txt  wl.1
doc/: config.h.in  project.cpp.in
include/: pgtl
include/pgtl/: Algorithm.h  System.h
include/pgtl/Algorithm/: WangLandau.h
include/pgtl/State/: HypercubicIsingState.h
include/pgtl/System/: HypercubicIsingSystem.h  HypercubicQPottsSystem.h
include/pgtl/utils/: Grid.h  defaults.h  function.h  result_of.h
report/: Figures.nb  build.sh  report.bbl  report.bib  report.tex
report/pictures/: make.sh
report/pictures/EPS/: cv16.eps  cv16_errlog.eps  cv32.eps  cv32_errlog.eps  cv64.eps  cv64_errlog.eps  cv_tc.eps  entropy16.eps  entropy16_errlog.eps  entropy32.eps  entropy32_errlog.eps  free16.eps  (+14 more)
scripts/: collect.sh
src/: options.h  wl.cpp
test_HypercubicGrid/: main.cpp
wanglandau/: CMakeLists.txt  build.sh  collect.sh  main.cpp  options.h  strip_too_large_g.sh  wl  wl.1  wl.cpp  wlConfig.h
wanglandau.xcodeproj/: project.pbxproj
wanglandau.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
wanglandau/include/: Algorithm.h  System.h
wanglandau/include/Algorithm/: WangLandau.h
wanglandau/include/State/: HypercubicIsingState.h
wanglandau/include/System/: HypercubicIsingSystem.h
wanglandau/include/utils/: result_of.h
wanglandau/include/utils/Grid/: HypercubicGrid.h
wanglandau/include/utils/functions/: mod.h  pow.h
wanglandau/wl.dSYM/Contents/Resources/DWARF/: a.out
wanglandau/work/10/1/: dos_formatted.txt  input.txt  log.txt
wanglandau/work/11/1/: dos_formatted.txt
wanglandau/work/12/1/: dos_formatted.txt  log.txt
wanglandau/work/14/1/: dos_formatted.txt  log.txt
wanglandau/work/15/1/: dos_formatted.txt  input.txt  log.txt
wanglandau/work/16/1/: log.txt
wanglandau/work/17/1/: log.txt
wanglandau/work/18/1/: dos_formatted.txt  input.txt
wanglandau/work/19/1/: dos_formatted.txt  log.txt
wanglandau/work/2/1/: dos_formatted.txt  log.txt
wanglandau/work/20/1/: dos_formatted.txt  log.txt
wanglandau/work/22/1/: dos_formatted.txt  input.txt
wanglandau/work/24/1/: dos_formatted.txt  input.txt
wanglandau/work/3/1/: input.txt
wanglandau/work/32/1/: dos_formatted.txt  input.txt
wanglandau/work/4/1/: dos_formatted.txt  input.txt  log.txt
wanglandau/work/5/1/: dos_formatted.txt  input.txt
wanglandau/work/6/1/: input.txt
wanglandau/work/64/1/: doslog.txt  log.txt
wanglandau/work/7/1/: dos_formatted.txt  log.txt
wanglandau/work/8/1/: input.txt
wanglandau/work/9/1/: dos_formatted.txt  input.txt  log.txt
work/: Analysis.nb  dos_formatted.txt  input.txt  log.txt
(+68 files in other folders)
